[package]
name = "b3"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2", features = ["serde"] }
bytes = "1"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
temp-dir = "0.1.16"
